# allezon

./: .dockerignore  Cargo.toml  Dockerfile.api_server  Dockerfile.consumer  README.md  aerospike.conf  install.sh
.github/workflows/: basic-checks.yml
ansible/: allezon.service  allezon.yaml  allezon_start.sh.j2  full.yaml  hosts.yaml
ansible/aerospike/: aerospike.conf.j2  aerospike.yaml
ansible/api_server/: api_server.service  api_server_start.sh.j2
ansible/consumer/: consumer.service  consumer_start.sh.j2
ansible/kafka/: kafka.yaml  server.properties.j2  zookeeper.properties.j2
ansible/nginx/: api_proxy.conf.j2  nginx.yaml
api_server/: Cargo.toml
api_server/src/: aggregates.rs  app.rs  db_query.rs  dummy_server.rs  lib.rs  main.rs  server.rs  time_range.rs  user_profiles.rs  user_tag.rs
consumer/: Cargo.toml
consumer/src/: aggregates.rs  db_ops.rs  lib.rs  main.rs  user_profiles.rs
database/: Cargo.toml
database/src/: aggregates.rs  client.rs  lib.rs  retrying_client.rs  user_tag.rs
event_queue/: Cargo.toml
event_queue/src/: consumer.rs  producer.rs
src/: aggregates.rs  app.rs  db_client.rs  main.rs  server.rs  time_range.rs
tag_queue/: Cargo.toml
tag_queue/src/: consumer.rs  producer.rs
