[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
envy = "0.4.2"
event_queue = { path = "../event_queue" }
api_server = { path = "../api_server" }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1.0.68"
log = "0.4.17"
env_logger = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
async-trait = "0.1.63"
