[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerospike = { git = "https://github.com/asynos/aerospike-client-rust.git", branch = "async", features = ["rt-tokio"] }
anyhow = "1.0.68"
chrono = { version = "0.4.23", features = ["serde"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.26"
