[package]
name = "event_queue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
anyhow = "1.0.68"
async-trait = "0.1.63"
futures-util = "0.3.26"
serde_json = "1.0.91"
serde = { version = "1.0.152" }
tokio = { version = "1.24.2" }
